package com.aiu.trips.enums;

public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CANCELLED
}
