package com.aiu.trips.enums;

public enum ExportFormat {
    PDF,
    CSV,
    EXCEL,
    JSON
}
