package com.aiu.trips.enums;

public enum NotificationType {
    NEW_EVENT,
    EVENT_UPDATE,
    REMINDER
}
