@startuml Complete_System

!define INTERFACE_COLOR #E8F5E9
!define CONTROLLER_COLOR #FCE4EC
!define FACADE_COLOR #FFF9C4

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor<<interface>> INTERFACE_COLOR
    BackgroundColor<<controller>> CONTROLLER_COLOR
    BackgroundColor<<facade>> FACADE_COLOR
}

title University Trips & Events Management System - High-Level Architecture

' ==================== SYSTEM INTERFACES ====================
package "Core System Interfaces" {
    
    interface IAuthenticationUserManagement <<interface>> {
        +register(userData: UserDTO): Response
        +login(email: String, password: String): AuthToken
        +verifyEmail(token: String): Response
        +resetPassword(email: String): Response
        +manageUserRole(userId: String, role: UserRole): Response
    }

    interface IActivityManagement <<interface>> {
        +createActivity(data: ActivityDTO, type: ActivityType): ActivityDTO
        +updateActivity(id: String, data: ActivityDTO): ActivityDTO
        +deleteActivity(id: String): Response
        +getAllActivities(): List<ActivityDTO>
    }

    interface IBookingTicketingSystem <<interface>> {
        +browseEvents(filters: EventFilterDTO): List<EventDTO>
        +bookEvent(studentId: String, eventId: String): BookingDTO
        +generateTicket(bookingId: String): TicketDTO
        +validateTicket(qrCode: String): Boolean
    }

    interface INotificationSystem <<interface>> {
        +sendNotification(userId: String, message: String, type: NotificationType): Response
        +notifyEventUpdate(eventId: String, message: String): Response
        +sendBulkNotification(userIds: List<String>, message: String): Response
    }

    interface IReportsAnalytics <<interface>> {
        +generateReport(reportType: ReportType, filters: ReportFilterDTO): ReportDTO
        +exportReport(reportId: String, format: ExportFormat): FileDTO
        +getStatistics(): SystemStatisticsDTO
        +collectFeedback(feedbackData: FeedbackDTO): Response
    }
}

' ==================== CONTROLLER LAYER (with Facade & Chain of Responsibility) ====================
package "Controller Layer" {
    
    interface IApplicationFacade <<interface>> {
        +register(userData: UserDTO): Response
        +login(email: String, password: String): AuthToken
        +createActivity(data: ActivityDTO, type: ActivityType): ActivityDTO
        +bookEvent(studentId: String, eventId: String): BookingDTO
        +sendNotification(userId: String, message: String, type: NotificationType): Response
        +generateReport(reportType: ReportType, filters: ReportFilterDTO): ReportDTO
    }
    
    class ApplicationFacade <<facade>> {
        -IAuthenticationUserManagement authService
        -IActivityManagement activityService
        -IBookingTicketingSystem bookingService
        -INotificationSystem notificationService
        -IReportsAnalytics reportService
    }
    
    class SystemController <<controller>> {
        -IApplicationFacade applicationFacade
        -RequestHandler handlerChain
        +handleRequest(request: HttpRequest): HttpResponse
    }
    
    IApplicationFacade <|.. ApplicationFacade
    SystemController o-- IApplicationFacade
    
    ApplicationFacade o-- IAuthenticationUserManagement
    ApplicationFacade o-- IActivityManagement
    ApplicationFacade o-- IBookingTicketingSystem
    ApplicationFacade o-- INotificationSystem
    ApplicationFacade o-- IReportsAnalytics
}

' ==================== COMPONENT REFERENCES ====================
note as ComponentNote
  **Detailed Component Diagrams:**
  
  **Controller.pu**
  - Facade Pattern: ApplicationFacade
  - Chain of Responsibility: Request Handler Chain
  
  **User_Management.pu**
  - User authentication and management
  
  **Event_Management.pu**
  - Factory Pattern: Event/Trip creation
  - Prototype Pattern: Event cloning
  - Builder Pattern: Event construction
  
  **Booking_Ticketing.pu**
  - Decorator Pattern: Ticket Service (Signed QR, Audit Log)
  - Chain of Responsibility: Booking Validation Chain
  
  **Notification.pu**
  - Adapter Pattern: Email Service Adapters (SMTP, SendGrid, AWS SES)
  - Bridge Pattern: Message Types × Channels
  
  **Reports_Analytics.pu**
  - Builder Pattern: Report generation (PDF, CSV)
  
  **Data_Layer.pu**
  - Entity relationships and data models
end note

' ==================== REPOSITORY INTERFACES ====================
package "Repository Layer (Data Access)" {
    
    interface IUserRepository <<interface>> {
        +save(user: User): User
        +findByEmail(email: String): User
        +update(user: User): User
    }

    interface IEventRepository <<interface>> {
        +save(event: Event): Event
        +findById(eventId: String): Event
        +findAll(): List<Event>
        +update(event: Event): Event
        +delete(eventId: String): Boolean
    }

    interface IBookingRepository <<interface>> {
        +save(booking: Booking): Booking
        +findById(bookingId: String): Booking
        +findByStudent(studentId: String): List<Booking>
        +findByEvent(eventId: String): List<Booking>
    }

    interface INotificationRepository <<interface>> {
        +save(notification: Notification): Notification
        +findByRecipient(userId: String): List<Notification>
    }

    interface IReportRepository <<interface>> {
        +save(report: Report): Report
        +findById(reportId: String): Report
    }

    interface IFeedbackRepository <<interface>> {
        +save(feedback: Feedback): Feedback
        +findByEvent(eventId: String): List<Feedback>
    }
}

' ==================== DATA LAYER (ENTITIES) ====================
package "Data Layer (Entities)" {
    
    class User <<entity>> {
        -String userId
        -String email
        -String firstName
        -String lastName
        -String phoneNumber
        -String passwordHash
        -UserRole role
        -Boolean isVerified
        -DateTime createdAt
    }

    class Event <<entity>> {
        -String eventId
        -String name
        -String description
        -DateTime eventDate
        -String location
        -Integer capacity
        -Integer availableSeats
        -Decimal price
        -EventCategory category
        -EventStatus status
        -String organizerId
        -DateTime createdAt
    }

    class Booking <<entity>> {
        -String bookingId
        -String studentId
        -String eventId
        -DateTime bookingDate
        -BookingStatus status
        -DateTime createdAt
    }

    class Ticket <<entity>> {
        -String ticketId
        -String bookingId
        -String qrCode
        -Boolean isUsed
        -DateTime issueDate
    }

    class Notification <<entity>> {
        -String notificationId
        -String recipientId
        -String message
        -NotificationType type
        -Boolean isRead
        -DateTime sentDate
    }

    class Report <<entity>> {
        -String reportId
        -ReportType type
        -String filePath
        -DateTime generatedDate
    }

    class Feedback <<entity>> {
        -String feedbackId
        -String studentId
        -String eventId
        -Integer rating
        -String comment
        -DateTime submittedDate
    }

    ' Association: User organizes Events (1 to many)
    User "1" -- "0..*" Event : organizes >

    ' Association: User creates Bookings (1 to many)
    User "1" -- "0..*" Booking : creates >

    ' Association: User submits Feedback (1 to many)
    User "1" -- "0..*" Feedback : submits >

    ' Association: Event has Bookings (1 to many)
    Event "1" -- "0..*" Booking : has >

    ' Association: Event receives Feedback (1 to many)
    Event "1" -- "0..*" Feedback : receives >

    ' Composition: Booking owns Ticket (1 to 1, strong ownership)
    Booking "1" *-- "0..1" Ticket : generates

    ' Dependency: Repositories manage entities
    IUserRepository ..> User : manages
    IEventRepository ..> Event : manages
    IBookingRepository ..> Booking : manages
    INotificationRepository ..> Notification : manages
    IReportRepository ..> Report : manages
    IFeedbackRepository ..> Feedback : manages
}

' ==================== ENUMERATIONS ====================
package "Enumerations" {
    enum UserRole <<enum>> {
        STUDENT
        ORGANIZER
        ADMIN
    }

    enum EventCategory <<enum>> {
        FIELD_TRIP
        SEMINAR
        CONFERENCE
        CONCERT
    }

    enum EventStatus <<enum>> {
        UPCOMING
        COMPLETED
        CANCELLED
    }

    enum BookingStatus <<enum>> {
        PENDING
        CONFIRMED
        CANCELLED
    }

    enum NotificationType <<enum>> {
        NEW_EVENT
        EVENT_UPDATE
        REMINDER
    }

    enum ReportType <<enum>> {
        PARTICIPANTS
        REVENUE
        FEEDBACK
    }

    enum ExportFormat <<enum>> {
        PDF
        CSV
    }

    ' Composition: Entities own their enums (strong ownership)
    User *-- UserRole
    Event *-- EventCategory
    Event *-- EventStatus
    Booking *-- BookingStatus
    Notification *-- NotificationType
    Report *-- ReportType
    Report *-- ExportFormat
}

@enduml